# paciente-virtual

./: .gitignore  README.md  app.js  package.json  pyproject.toml
Projeto consulta virtual/: app.py  avaliador.py  requirements.txt  teste_fala.py  teste_microfone.py
avaliacoes/: anorexia.json  ansiedade_generalizada.json  apendicite.json  autolesao_adolescente.json  avc_isquemico.json  borderline.json  cetoacidose.json  colica_biliar.json  colica_renal.json  crise_asmatica.json  crise_existencial.json  crise_hipertensiva.json  dengue.json  dependencia_alcool.json  depressao.json  depressao_pos_parto.json  dpoc_exacerbada.json  embolia_pulmonar.json  enxaqueca.json  esgotamento_profissional.json  fobia_social.json  gastroenterite.json  ideacao_suicida.json  infarto.json  insonia_cronica.json  insuficiencia_cardiaca.json  lombalgia.json  ludopatia.json  luto.json  pancreatite.json  pielonefrite.json  pneumonia.json  tept.json  toc.json  transtorno_adaptacao.json  transtorno_bipolar.json  transtorno_de_panico.json  tvp.json  ulcera_peptica.json  violencia_psicologica.json
casos/: anorexia.json  ansiedade_generalizada.json  apendicite.json  autolesao_adolescente.json  avc_isquemico.json  borderline.json  cetoacidose.json  colica_biliar.json  colica_renal.json  crise_asmatica.json  crise_existencial.json  crise_hipertensiva.json  dengue.json  dependencia_alcool.json  depressao.json  depressao_pos_parto.json  dpoc_exacerbada.json  embolia_pulmonar.json  enxaqueca.json  esgotamento_profissional.json  fobia_social.json  gastroenterite.json  ideacao_suicida.json  infarto.json  (+16 more)
(+90 files in other folders)
